fixes scrolling on mobile

--- a/sites/all/themes/clean/css/_layout.scss
+++ b/sites/all/themes/clean/css/_layout.scss
@@ -63,8 +63,8 @@ body.html{
         -webkit-overflow-scrolling: touch;
         text-transform: uppercase;
         background: rgba(255,255,255,0.9);
-        transform: translateX(-100%);
-        transition: all 0.5s ease-in-out;
+        transform: translateX(100%);
+        transition: all 0.3s ease-in-out;
         .menu-open &{
             transform: translateX(0%);
         }
